Fixes x overflow

--- a/website/booksManiacs/static/booksManiacs/css/application.css
+++ b/website/booksManiacs/static/booksManiacs/css/application.css
@@ -23,6 +23,7 @@
 	position: relative;
 	top: 70pt;
 	bottom: 10pt;
+	overflow-x: hidden;
 }
 
 #footer {
